# talk-mocking-python

./: .gitignore  README.md  build.bash  dev_build.bash  mkslides_config.yml  pyproject.toml
slides/: slides.md
src/lenormju/: example_response.json  meteo.py  meteo_app.py  meteo_station.py
tests/: test_meteo.py
