[project]
name = "talk-mocking-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.11.0",
    "memory-graph>=0.3.61",
    "mkslides>=1.0.10",
    "pytest>=8.4.2",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
testpaths = ["tests/"]
pythonpath = ["src/"]
